fix: Adjusted spacing below course.

--- a/css/project1.css
+++ b/css/project1.css
@@ -99,7 +99,7 @@ a, a:visited {
 .course {
     display: flex;
     flex-direction: column;
-    padding: 0.5% 0.5%;
+    padding: 0.5% 0.5% 1% 0.5%;
     box-sizing:border-box;
 }
 
